feat: functional correct
Signed-off-by: manticore-projects <andreas@manticore-projects.com>