@@ -1,9 +1,3 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This project uses @Incubating APIs which are subject to change.
- */
-
 plugins {
     id 'java-library'
     id 'maven-publish'
@@ -21,15 +15,17 @@ repositories {
 dependencies {
     testImplementation libs.org.openjdk.jmh.jmh.core
     testImplementation libs.org.openjdk.jmh.jmh.generator.annprocess
-    testImplementation libs.org.junit.jupiter.junit.jupiter.api
-    testImplementation libs.org.assertj.assertj.core
-    testImplementation libs.org.junit.jupiter.junit.jupiter.engine
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.4'
+    testImplementation("org.assertj:assertj-core:+")
 }
 
 group = 'com.davidvlijmincx.lio'
 version = '0.1-SNAPSHOT'
 description = 'JUring'
-java.sourceCompatibility = JavaVersion.VERSION_23
 
 publishing {
     publications {
@@ -47,11 +43,35 @@ tasks.withType(Javadoc) {
     options.encoding = 'UTF-8'
 }
 
+java {
+    withSourcesJar()
+    //withJavadocJar()
+
+    sourceCompatibility = '23'
+    targetCompatibility = '23'
+
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(25))
+    }
+}
+
 jmh {
+    jmhVersion = '1.37'
     jvmArgs = [
             "--enable-native-access=ALL-UNNAMED"
             , "--add-opens=java.base/sun.misc=ALL-UNNAMED"
             , "--add-opens=java.base/java.lang=ALL-UNNAMED"
+    ]
+    includes = ['bench.FileChannelDBPatterns.*']
+}
 
+test {
+    useJUnitPlatform()
+
+    jvmArgs = [
+            "--enable-native-access=ALL-UNNAMED",
+            "--add-opens=java.base/sun.misc=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
     ]
 }
